ported Remag's PCB/UV light box changes from 1.20.1